[package]
authors = ["OnlyDust <tech@onlydust.xyz>"]
description = "Dusty Bot"
edition = "2021"
homepage = "https://onlydust.xyz"
license-file = "LICENSE"
name = "dusty-bot"
readme = "README.md"
repository = "https://github.com/onlydustxyz/marketplace"
version = "1.0.0"
default-run = "dusty-bot"

[dependencies]

# Async
async-trait = "0.1.56"
futures = {version = "0.3.21", features = ["alloc"]}
tokio = {version = "1.18.2", features = ["full"]}

# Core types
uuid = {version = "1.3.3", default_features = false, features = [
  "v4",
  "serde",
]}

# Github
octocrab = { git = "https://github.com/onlydustxyz/octocrab.git", features=["stream"] }

# Http client
url = "2.2.2"

# Http Server
juniper = "0.15.10"
juniper_rocket = "0.8.2"
rocket = {version = "0.5.0-rc.2", features = ["json", "uuid"]}

# Tracing
tracing = "0.1"

# Errors
anyhow = "1.0.57"
thiserror = "1.0.31"

# Serde
serde = {version = "1.0.137", features = ["derive"]}
serde_json = {version = "1.0.81"}

# Utils
derive-getters = "0.2.0"
derive_more = "0.99.17"
derive-new = "0.5.9"
dotenv = "0.15.0"
lazy_static = "1.4.0"
chrono = { version = "0.4", features = ["serde"] }

# Local dependecies
domain = {path = "../common/domain"}
infrastructure = {path = "../common/infrastructure"}
presentation = {path = "../common/presentation"}
olog = {path = "../common/olog"}

[dev-dependencies]
async-std = {version = "1.12.0", features = ["attributes"]}
assert_matches = "1.5"
rstest = "0.15.0"
testing = {path = "../common/testing"}
mockall = "0.11.2"
mockall_double = "0.3.0"
