[package]
authors = ["OnlyDust <tech@onlydust.xyz>"]
description = "Event listeners"
edition = "2021"
homepage = "https://onlydust.xyz"
license-file = "LICENSE"
name = "event-listeners"
readme = "README.md"
repository = "https://github.com/onlydustxyz/marketplace-backend"
version = "1.0.0"
default-run = "event-listeners"

[dependencies]

# Async
async-trait = "0.1.56"
futures = {version = "0.3.21", features = ["alloc"]}
tokio = {version = "1.18.2", features = ["full"]}

# Database
diesel = {version = "1.4.8", default-features = false, features = [
  "postgres",
  "serde_json",
  "uuidv07",
  "chrono",
]}

# CLI
clap = { version = "4.1.4", features = ["derive"] }

# Core types
uuid = {version = "0.8.2", default_features = false, features = [
  "v4",
  "serde",
]}
rust_decimal = {version="1.26.1", features=["db-diesel-postgres"]}

# Http client
reqwest = {version = "0.11", default-features = false}
url = "2.2.2"

# Http Server
juniper = "0.15.10"
juniper_warp = "0.7.0"
warp = "0.3.3"

# Tracing
tracing = "0.1"

# Errors
anyhow = "1.0.57"
thiserror = "1.0.31"

# Serde
serde = {version = "1.0.137", features = ["derive"]}
serde_json = {version = "1.0.81"}

# Utils
derive-getters = "0.2.0"
derive_more = "0.99.17"
dotenv = "0.15.0"
lazy_static = "1.4.0"
chrono = { version = "0.4", features = ["serde"] }

# Local dependecies
domain = {path = "../common/domain"}
infrastructure = {path = "../common/infrastructure"}
derive = {path = "../common/derive"}
olog = {path = "../common/olog"}

[dev-dependencies]
assert_matches = "1.5"
envtestkit = "1.1.2"
mockito = "0.31.0"
rstest = "0.15.0"
testing = {path = "../common/testing"}
rust_decimal_macros = "1.26"
