[package]
authors = ["OnlyDust <tech@onlydust.xyz>"]
description = "Event store"
edition = "2021"
homepage = "https://onlydust.xyz"
license-file = "LICENSE"
name = "event-store"
readme = "README.md"
repository = "https://github.com/onlydustxyz/marketplace-backend"
version = "0.0.1"

[dependencies]
# Database
diesel = {version = "1.4.8", default-features = false, features = [
  "postgres",
  "serde_json",
]}

# RabbitMQ
lapin = "2.1.1"

# Async
async-trait = "0.1.56"
futures = {version = "0.3.21", features = ["alloc"]}
tokio = {version = "1.18.2", features = ["full"]}

# Tracing
tracing = "0.1"

# Serde
serde = {version = "1.0.137", features = ["derive"]}
serde_json = {version = "1.0.81"}

# Datetime
chrono = { version = "0.4", features = ["serde"] }

# Utils
dotenv = "0.15.0"

# Errors
anyhow = "1.0.57"
thiserror = "1.0.31"

# Local dependecies
backend_domain = {path = "../common/domain", package = "domain"}
backend_infrastructure = {path = "../common/infrastructure", package = "infrastructure"}
olog = {path = "../common/olog"}

# TO REMOVE
uuid = {version = "0.8.2", default_features = false, features = [
  "v4",
  "serde",
]}
