[package]
edition = "2021"
name = "github-proxy"
version = "0.1.0"

[dependencies]
# Config
figment = {version = "0.10.8", features = ["env", "toml"]}

# Errors
anyhow = "1.0.57"
thiserror = "1.0.31"

# Github
octocrab = {git = "https://github.com/onlydustxyz/octocrab.git", branch = "with-cache"}

# Http client
reqwest = "0.11.13"

# Http Server
juniper = {version = "0.15.10"}
juniper_rocket = {version = "0.8.2"}
rocket = {version = "0.5.0-rc.2", features = ["json", "uuid"]}

# Serde
serde = {version = "1.0.137", features = ["derive"]}

# Tracing
tracing = "0.1"

# Utils
chrono = "0.4.23"
derive-getters = "0.2.0"
derive_more = "0.99.17"
dotenv = "0.15.0"

# Local dependecies
domain = {path = "../common/domain"}
infrastructure = {path = "../common/infrastructure"}
olog = {path = "../common/olog"}
presentation = {path = "../common/presentation"}

[dev-dependencies]
rstest = "0.15.0"
