[package]
name = "github-proxy"
version = "0.1.0"
edition = "2021"

[dependencies]

# Async
async-trait = "0.1.56"

# Errors
anyhow = "1.0.57"
thiserror = "1.0.31"

# Http Server
juniper = {git = "https://github.com/onlydustxyz/juniper", rev="3ea95737b7665bdaa7636ef3aa4d96cc4ef5c5f7"}
juniper_rocket =  {git = "https://github.com/onlydustxyz/juniper", rev="dcee7b053f30aa3a8eedad4ad57f1950a4d241ea"}
rocket = {version = "0.5.0-rc.2", features = ["json", "uuid"]}

# Serde
serde = {version = "1.0.137", features = ["derive"]}

# Tracing
tracing = "0.1"

# Utils
dotenv = "0.15.0"

# Local dependecies
infrastructure = {path = "../common/infrastructure"}
presentation = {path = "../common/presentation"}
olog = {path = "../common/olog"}
domain = {path = "../common/domain"}

[dev-dependencies]
rstest = "0.15.0"
async-std = {version = "1.12.0", features = ["attributes"]}
