[package]
name = "github-proxy"
version = "0.1.0"
edition = "2021"

[dependencies]

# Async
async-trait = "0.1.56"

# Errors
anyhow = "1.0.72"
thiserror = "1.0.43"

# Http Server
juniper = "0.15.11"
juniper_rocket = "0.8.2"
rocket = {version = "0.5.0-rc.2", features = ["json", "uuid"]}

# Serde
serde = {version = "1.0.137", features = ["derive"]}

# Tracing
tracing = "0.1"

# Utils
dotenv = "0.15.0"

# Local dependecies
infrastructure = {path = "../common/infrastructure"}
presentation = {path = "../common/presentation"}
olog = {path = "../common/olog"}
domain = {path = "../common/domain"}

[dev-dependencies]
rstest = "0.15.0"
async-std = {version = "1.12.0", features = ["attributes"]}
