[package]
name = "indexer-domain"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

octocrab_indexer = { package = "octocrab", version = "0.30.1", features = [
	"stream",
] }

# Async
async-trait = "0.1.56"
futures = { version = "0.3.21", features = ["alloc"] }

# Core types
uuid = { version = "1.3.3", default_features = false, features = [
	"v4",
	"serde",
] }
url = { version = "2.2.2", features = ["serde"] }

# Errors
anyhow = "1.0.72"
thiserror = "1.0.43"

# Serde
serde = { version = "1.0.137", features = ["derive"] }
serde_json = { version = "1.0.81" }

# Utils
derive-getters = "0.2.0"
derive_more = "0.99.17"
derive-new = "0.5.9"
chrono = { version = "0.4", features = ["serde"] }
itertools = "0.10.5"

# Local dependecies

[dev-dependencies]
rstest = "0.15.0"
async-std = { version = "1.12.0", features = ["attributes"] }
mockall = "0.11.2"
