[package]
authors = ["OnlyDust <tech@onlydust.xyz>"]
description = "Domain objects and behaviours used in OnlyDust applictions."
edition = "2021"
homepage = "https://onlydust.xyz"
license-file = "LICENSE"
name = "domain"
readme = "README.md"
repository = "https://github.com/onlydustxyz/marketplace-backend"
version = "0.0.1"

[dependencies]

# Async
async-trait = "0.1.56"
futures = {version = "0.3.21", features = ["alloc"]}
pin-project-lite = "0.2.9"

# Core types
url = "2.2.2"
uuid = {version = "1.3.3", default_features = false, features = [
  "v4",
  "serde",
]}
rust_decimal = "1.26.1"
rusty-money = {version = "0.4.1", features = ["iso", "crypto"]}
iban_validate = {version = "4.0.1", features = ["serde"]}

# Errors
anyhow = "1.0.57"
thiserror = "1.0.31"

# Log
log = "0.4.17"

# Tracing
tracing = "0.1"

# Serde
serde = {version = "1.0.137", features = ["derive"]}
serde_json = {version = "1.0.81"}
serde_with = {version = "2.3.1", features = ["chrono_0_4"]}

# Datetime
chrono = { version = "0.4", features = ["serde"] }

# Utils
derive-getters = "0.2.0"
derive_more = "0.99.17"
derive-new = "0.5.9"

# Database
diesel = {version = "2.1.0", default-features = false, features = ["postgres","extras"]}
diesel-derive-newtype = "2.1.0"

# Web3
web3 = "0.18.0"

# Local dependecies
derive = {path = "../derive"}
olog = {path = "../olog"}

# Graphql
juniper = {git = "https://github.com/onlydustxyz/juniper", rev="3ea95737b7665bdaa7636ef3aa4d96cc4ef5c5f7"}

[dev-dependencies]
assert-json-diff = "2.0.2"
assert_matches = "1.5"
async-std = {version = "1.12.0", features = ["attributes"]}
rstest = "0.15.0"
testing = {path = "../testing"}
rust_decimal_macros = "1.26"
regex = "1.7.0"
mockall = "0.11.2"
mockall_double = "0.3.0"

[features]
rocket = []
