[package]
name = "presentation"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

# Async
async-trait = "0.1.56"

# Core types
url = {version = "2.2.2",  features = ["serde"]}

uuid = {version = "1.3.3", default_features = false, features = [
  "v4",
  "serde",
]}

# Error
thiserror = "1.0.31"

# Http Server
rocket = "0.5.0-rc.2"

# Serde
serde = {version = "1.0.137", features = ["derive"]}
serde_json = {version = "1.0.81"}

# Utils
derive-getters = "0.2.0"

# Local dependecies
domain = {path = "../domain"}

[dev-dependencies]
async-std = {version = "1.12.0", features = ["attributes"]}
rstest = "0.15.0"
assert_matches = "1.5"
